--- a/front/package.json
+++ b/front/package.json
@@ -11,7 +11,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc17",
     "@nuxtjs/axios": "^5.8.0",
+    "@nuxtjs/vuetify": "1.3.3",
+    "graphql-tag": "^2.10.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
