--- a/back/Gemfile
+++ b/back/Gemfile
@@ -24,6 +24,9 @@ gem 'puma', '~> 3.11'
 
 gem 'graphql'
 gem 'rack-cors'
+gem 'knock'
+
+gem 'bcrypt', '~> 3.1.7'
 
 # Reduces boot times through caching; required in config/boot.rb
 gem 'bootsnap', '>= 1.1.0', require: false
