--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/apollo": "^4.0.0-rc17",
+    "@nuxtjs/auth": "^4.8.4",
     "@nuxtjs/axios": "^5.8.0",
     "@nuxtjs/vuetify": "1.3.3",
     "graphql-tag": "^2.10.1",
